# tree-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-notes.md  api.md  implementation-plan.md  zippers-plus-hateoas.md
tests/: __init__.py  test_api.py  test_context.py  test_context_builder.py  test_link_builder.py  test_links.py  test_node.py  test_traversal_service.py  test_tree_service.py  test_types.py  test_zipper_service.py
tree/: __init__.py  config.py  dependencies.py  main.py  types.py
tree/api/: __init__.py  nodes.py
tree/models/: __init__.py  context.py  links.py  node.py  response.py  responses.py
tree/services/: __init__.py  traversal.py  tree.py  zipper.py
tree/utils/: __init__.py  context.py  link_builder.py
